Revise README YAML

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,9 +1,5 @@
 ---
-title: "assign4nspack"
-output:
-  github_document:
-    toc: true
-    toc_depth: 2
+output: github_document
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
